--- a/src/components/Colorstyle.css
+++ b/src/components/Colorstyle.css
@@ -4,4 +4,14 @@
     background-color: #7fffd4!important;
     font-family: Sans-Serif;
     text-align: center;
+    height: '80px' ;
+  }
+
+
+  .background-red {
+    background-color: red;
+  }
+  
+  .background-blue {
+    background-color: blue;
   }
