--- a/src/css_files/navbar.css
+++ b/src/css_files/navbar.css
@@ -23,7 +23,7 @@
   
   }
   .bigblue {
-    background-color: gray!important;
+    background-color: rgba(128, 128, 128, 0.604)!important;
     font-family: Sans-Serif;
     text-align: center;
   }
